--- a/MoreAppNPWP.json
+++ b/MoreAppNPWP.json
@@ -1,11 +1,11 @@
 [
       {
-    		"nama_apps" :"Cara Daftar Kartu Prakerja",
+    		"nama_apps" :"Daftar Prakerja",
     		"img_url" : "https://iili.io/hiBZ6F.jpg",
     		"apps_url" : "https://play.google.com/store/apps/developer?id=Amanah+Project"
     	},
       {
-    		"nama_apps" :"Cara Daftar NPWP Online",
+    		"nama_apps" :"Daftar NPWP Online",
     		"img_url" : "https://iili.io/hiBbaa.png",
     		"apps_url" : "https://play.google.com/store/apps/developer?id=Amanah+Project"
     	},
