update name json

--- a/MoreAppNPWP.json
+++ b/MoreAppNPWP.json
@@ -1,11 +1,11 @@
 [
     	{
-    		"nama_apps" :"Suara Tokek",
+    		"nama_apps" :"Gecko Sounds",
     		"img_url" : "https://iili.io/hiBLCP.jpg",
     		"apps_url" : "https://play.google.com/store/apps/developer?id=Amanah+Project"
     	},
 	    {
-    		"nama_apps" :"Suara Nyamuk",
+    		"nama_apps" :"Mosquito Sounds",
     		"img_url" : "https://iili.io/hiBPjV.jpg",
     		"apps_url" : "https://play.google.com/store/apps/developer?id=Amanah+Project"
     	},
